find out error when running on github